--- a/AproTwitterTrends/Info.plist
+++ b/AproTwitterTrends/Info.plist
@@ -41,5 +41,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.mattdonnelly.swifter-scheme</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>swifter</string>
+				<string>http://transfertwitter/callback</string>
+				<string></string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
